--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-gonk
+<!doctype html>
+<html>
+
+<head>
+    <title>gonk</title>
+    <meta name="description" content="gonk">
+    <meta name="keywords" content="autechre gonk">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" sizes="32x32"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+
+</head>
+
+<style>
+	.main {
+		background-color: #ffffff;
+		max-width: 800px;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 10px 10px;
+		font-family: "Roboto", sans-serif;
+		text-align: center;
+		font-size: 2em;
+		color:black;
+			}
+
+		img {
+  		animation: vibrate 2.188s;
+  		animation-iteration-count: 1;
+			}
+
+		@keyframes vibrate {
+		  38% { transform: translateY(1px); }
+		  40% { transform: translateY(-1px); }
+		  42% { transform: translateY(1px); }
+		  44% { transform: translateY(-1px); }
+		  46% { transform: translateY(1px); }
+		  48% { transform: translateY(-1px); }
+		  50% { transform: translateY(1px); }
+		  52% { transform: translateY(-1px); }
+		  54% { transform: translateY(1px); }
+		  56% { transform: translateY(-1px); }
+		  58% { transform: translateY(1px); }
+		  60% { transform: translateY(0px); }
+			}
+
+
+</style>
+
+<body>
+	<audio autoplay><source src="media/gonk.mp3"></audio>
+	<div class="main">
+
+	  <p>You've been gonked!</p>
+
+	  <img src="media/gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="400px">
+
+	  <p style="font-size:0.5em;vertical-align:middle;">
+
+	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re" alt="Hits">
+                        
+	  </p>
+
+	</div>
+</body>
+</html>
