--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="gonk">
     <meta name="keywords" content="autechre gonk">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.ico" sizes="32x32"/>
+    <link rel="icon" href="media/favicon.ico" sizes="32x32"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
 </head>
