--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 	  <p style="font-size:0.5em;vertical-align:middle;">
 
-	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re" alt="Hits">
+	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks served.
                         
 	  </p>
 
