--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 </style>
 
 <body>
-	<audio autoplay><source src="media/gonk.mp3"></audio>
+	<audio autoplay><source src="gonk.mp3"></audio>
 	<div class="main">
 
 	  <p>You've been gonked!</p>
 
-	  <img src="media/gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="400px">
+	  <img src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="400px">
 
 	  <p style="font-size:0.5em;vertical-align:middle;">
 
