--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		color:black;
 			}
 
-		img {
+		img.shake {
   		animation: vibrate 2.188s;
   		animation-iteration-count: 1;
 			}
@@ -52,10 +52,10 @@
 	<div class="main">
 
 	  <p>You've been gonked!</p>
+		
+	  <img class="shake" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="400px">
 
-	  <img src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="400px">
-
-	  <p style="font-size:0.5em;vertical-align:middle;">
+	  <p>
 
 	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks served.
                         
