--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 		color:black;
 			}
 
-		img.shake {
+		img.a {
   		animation: vibrate 2.188s;
   		animation-iteration-count: 1;
+			}
+	
+		img.b {
+		vertical-align: text-bottom;
 			}
 
 		@keyframes vibrate {
@@ -53,11 +57,11 @@
 
 	  <p>You've been gonked!</p>
 		
-	  <img class="shake" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="400px">
+	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
 
-	  <p>
+	  <p style="fontsize:1.5em";vertical-align:middle;>
 
-	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks served.
+	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re" height="1.5em"> gonks delivered.
                         
 	  </p>
 
