--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 		
 	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
 
-	  <p style="fontsize:1.5em";vertical-align:middle;>
+	  <p style="fontsize:1.5em";>
 
-	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re" height="1.5em"> gonks delivered.
+	  <img class="b" src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks delivered.
                         
 	  </p>
 
