--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 		padding: 10px 10px;
 		font-family: "Roboto", sans-serif;
 		text-align: center;
-		font-size: 2em;
 		color:black;
 			}
 
@@ -55,11 +54,11 @@
 	<audio autoplay><source src="gonk.mp3"></audio>
 	<div class="main">
 
-	  <p>You've been gonked!</p>
+	  <p style="font-size: 2em;">You've been gonked!</p>
 		
 	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
 
-	  <p style="fontsize:1.5em";>
+	  <p style="fontsize:1.5em;">
 
 	  <img class="b" src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks delivered.
                         
