--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
   		animation-iteration-count: 1;
 			}
 	
-		img.b {
-		vertical-align: 20%;;
-			}
-
 		@keyframes vibrate {
 		  38% { transform: translateY(1px); }
 		  40% { transform: translateY(-1px); }
@@ -59,10 +55,8 @@
 	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
 
 	  <p style="fontsize:1.5em;">
-
-	  <img class="b" src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks delivered.
-                        
-	  </p>
+	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re" height="1.5em"> gonks delivered.
+          </p>
 
 	</div>
 </body>
