--- a/index.html
+++ b/index.html
@@ -55,27 +55,13 @@
 	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
 
 	  <p style="fontsize:1.5em;">
-	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re" height="1.5em"> gonks delivered.
+	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks delivered.
           </p>
-
-		
-	<div id="count"></div>
-		
-		
+	
 	</div>
 	
 
 	
 </body>
-	
-<script>
-let targetUrl = 'www.autech.re';
-let query = '?url=' + encodeURIComponent(targetUrl);
-let xmlHttp = new XMLHttpRequest();
-xmlHttp.withCredentials = true;
-xmlHttp.open('GET', 'https://autechism.pythonanywhere.com/nocount' + query, false);
-xmlHttp.send(null);
-document.getElementById("count").innerHTML = xmlHttp.responseText;
-</script>
-	
+		
 </html>
