--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
 		
 	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
 
-	  <p style="fontsize:1.5em;">
-	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re"> gonks delivered.
-          </p>
+	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re">
 	
 	</div>
 	
