--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 	  <p style="font-size: 2em;">You've been gonked!</p>
 		
 	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
-&nbsp
-	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re">
+	</div>	
 	
+	<div class="main">
+	  <img src="https://autechism.pythonanywhere.com/count/tag.svg?url=autech.re">
 	</div>
 	
 
