--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style>
 	.main {
 		background-color: #ffffff;
-		max-width: 800px;
+		max-width: 880px;
 		margin-left: auto;
 		margin-right: auto;
 		padding: 10px 10px;
@@ -24,6 +24,7 @@
 			}
 
 		img.a {
+		width: 440px
   		animation: vibrate 2.188s;
   		animation-iteration-count: 1;
 			}
@@ -43,6 +44,11 @@
 		  60% { transform: translateY(0px); }
 			}
 
+		@media only screen and (max-width: 450px) {
+ 		img.a {
+    		  width: 100%;
+  				}
+			}
 
 </style>
 
@@ -52,7 +58,7 @@
 
 	  <p style="font-size: 2em;">You've been gonked!</p>
 		
-	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera" width="50%">
+	  <img class="a" src="gonked.jpg" alt="Wholesome photo of Rob and Sean from Autechre kicking snow at the camera">
 	</div>	
 	
 	<div class="main">
