--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ function open() {
 	
 	<div class="cover" style="height:100%;overflow: hidden;"><img id="cover" style="width:100%;object-fit: cover;" src="media/cover.jpg"></div>
 
-	<div class="covertext" id="covertext"><span style="font-size:0.9em;color:Gainsboro;cursor:text;">&#9472;&#62;&nbsp</span><span class="coverhover">autech.re</span><sup>(click)</sup></div>
+	<div class="covertext" id="covertext"><span style="font-size:0.9em;color:Gainsboro;cursor:text;">-&#62;&nbsp</span><span class="coverhover">autech.re</span><sup>(click)</sup></div>
 	
 	<audio id="gonk"><source src="media/gonk.mp3"></audio>
 
