--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ function open() {
   		transform: translate(-50%,-50%);
   		-ms-transform: translate(-50%,-50%);
 		cursor: pointer;
+		white-space: nowrap;
 			}
 
 		.coverhover:hover {
