--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ function open() {
     document.getElementById('covertext').style.display="none";
     document.getElementById('afterclick1').style.display="block";
     document.getElementById('afterclick2').style.display="block";
+    document.body.style.backgroundColor = 'white'
     document.getElementById('gonk').play();
     document.removeEventListener('click', open);
 }
@@ -110,7 +111,7 @@ function open() {
     src: url(media/Amina-Light.woff2);
 }
 
-
+ body {background-color: black;} 
 
 </style>
 
