--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function open() {
 	</div>
 	
 	<div class="email" id="afterclick3">
-	  <p>autechism@pm.me</p>
+	  <p>aetism@pm.me</p>
 	</div>
 
 
