--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function open() {
 	</div>
 	
 	<div class="email" id="afterclick3">
-	  <p>aetism@pm.me</p>
+	  <p><span style="text-align: left;"><a href="https://www.autechre.ws/">autechre.ws</a></span>aetism@pm.me</p>
 	</div>
 
 
