--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function open() {
 	</div>
 	
 	<div class="email" id="afterclick3">
-	  <p>Them: <a href="https://www.autechre.ws/">autechre.ws</a> / Us: aetism@pm.me</p>
+	  <p>them: <a href="https://www.autechre.ws/">autechre.ws</a> &nbsp&nbsp/&nbsp&nbsp us: aetism@pm.me</p>
 	</div>
 
 
