--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ function open() {
 		margin-left: auto;
 		margin-right: auto;
 		padding: 10px 5px;
-		font-family: "Amino-Regular", Arial, Helvetica, sans-serif;
+		font-family: Arial, Helvetica, sans-serif;
 		text-align: center;
 		color:black;
 			}
@@ -84,7 +84,7 @@ function open() {
 		right: 0px;
 		bottom: 0px;
 		padding-right:4px;
-		font-family: "Amino-Regular", Arial, Helvetica, sans-serif;
+		font-family: Arial, Helvetica, sans-serif;
 		font-size:0.5em;
 		text-align: right;
 		color:Grey;
